--- a/kindlepocket-web/src/main/resources/static/html/binding.html
+++ b/kindlepocket-web/src/main/resources/static/html/binding.html
@@ -9,6 +9,8 @@
 
 <!-- Loading Bootstrap -->
 <link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+<link href="/css/jasny-bootstrap.min.css" rel="stylesheet"/>
+<link href="/css/navmenu-push.css" rel="stylesheet"/>
 
 <!-- Loading Flat UI -->
 <link href="/css/flat-ui.css" rel="stylesheet"/>
@@ -19,7 +21,7 @@
 <script src="/js/lib/flat-ui.min.js"></script>
 <script src="/js/lib/application.js"></script>
 <script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/lib/angular-ui-router.js"></script>
+<script src="/js/lib/jasny-bootstrap.min.js"></script>
 <script src="/js/controller/bindingController.js"></script>
 <script src="/js/services/request.js"></script>
 
@@ -29,10 +31,6 @@
         width: 100%;
         height:100%;
         overflow-x: hidden;
-      }
-
-      .navbar-static-top {
-        margin-bottom: 19px;
       }
 
 </style>
@@ -49,70 +47,88 @@
 
 <body>
 
-
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-            </button>
-            <a class="navbar-brand" href="#">Kindle Pocket</a>
-        </div>
-        <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登陆</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
+    <div class="navmenu navmenu-default navmenu-fixed-left offcanvas">
+        <a class="navmenu-brand" href="#"><b>Kindle Pocket</b></a>
+        <ul class="nav navmenu-nav">
+            <li><a href="#">Top 10</a></li>
+            <li class="active"><a href="#">Binding</a></li>
+            <li><a href="#">Search</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <ul class="nav navmenu-nav">
+            <li><a href="#">Link</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
+                <ul class="dropdown-menu navmenu-nav">
+                    <li><a href="#">Action</a></li>
+                    <li><a href="#">Another action</a></li>
+                    <li><a href="#">Something else here</a></li>
+                    <li class="divider"></li>
+                    <li class="dropdown-header">Nav header</li>
+                    <li><a href="#">Separated link</a></li>
+                    <li><a href="#">One more separated link</a></li>
+                </ul>
+            </li>
+        </ul>
     </div>
-</div>
 
+    <div class="navbar navbar-default navbar-fixed-top">
+        <button type="button" class="navbar-toggle" data-toggle="offcanvas" data-target=".navmenu" data-canvas="body">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+    </div>
+
+    <div class="container">
 <div class="login">
     <!-- <div class="login-screen">-->
-    <form class="login-form" name="bindingForm" ng-controller="formController" novalidate ng-submit="submitForm()">
+        <form class="login-form" name="bindingForm" ng-controller="formController" novalidate ng-submit="submitForm()">
 
-        <div class="form-group">
-            <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入手机号"
-                   id="binding-phone" name="phone" ng-model="bindingData.phone" ng-minlength="11" ng-maxlength="11"
-                   required data-placement="top" data-toggle="tooltip"
-                   title="手机号是日后网页端应用上线后，绑定您的账号的凭证之一，但请放心填写，我们不会通过短信打扰您; 手机号长度11位，请不要输错"/>
-            <label class="login-field-icon fui-user" for="binding-phone"></label>
-        </div>
+            <div class="form-group">
+                <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入手机号"
+                       id="binding-phone" name="phone" ng-model="bindingData.phone" ng-minlength="11" ng-maxlength="11"
+                       required data-placement="top" data-toggle="tooltip"
+                       title="手机号是日后网页端应用上线后，绑定您的账号的凭证之一，但请放心填写，我们不会通过短信打扰您; 手机号长度11位，请不要输错"/>
+                <label class="login-field-icon fui-user" for="binding-phone"></label>
+            </div>
 
-        <div class="form-group">
-            <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入用户名"
-                   id="binding-userName" name="userName" ng-model="bindingData.userName" ng-minlength="5" ng-maxlength="20"
-                   required data-placement="top" data-toggle="tooltip"
-                   title="起个用户名，听起来不错;用户名长度：5 ~ 20 位"/>
-            <label class="login-field-icon fui-user" for="binding-userName"></label>
-        </div>
+            <div class="form-group">
+                <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入用户名"
+                       id="binding-userName" name="userName" ng-model="bindingData.userName" ng-minlength="5" ng-maxlength="20"
+                       required data-placement="top" data-toggle="tooltip"
+                       title="起个用户名，听起来不错;用户名长度：5 ~ 20 位"/>
+                <label class="login-field-icon fui-user" for="binding-userName"></label>
+            </div>
 
-        <div class="form-group">
-            <input type="email" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱"
-                   id="binding-email" name="email"
-                   ng-model="bindingData.email" required data-placement="top" data-toggle="tooltip"
-                   title="我们将会通过您的个人邮箱给您的kindle推送书籍; 邮箱地址格式: example@163.com"/>
-            <label class="login-field-icon fui-mail" for="binding-email"></label>
-        </div>
+            <div class="form-group">
+                <input type="email" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱"
+                       id="binding-email" name="email"
+                       ng-model="bindingData.email" required data-placement="top" data-toggle="tooltip"
+                       title="我们将会通过您的个人邮箱给您的kindle推送书籍; 邮箱地址格式: example@163.com"/>
+                <label class="login-field-icon fui-mail" for="binding-email"></label>
+            </div>
 
-        <div class="form-group">
-            <input type="password" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱密码或授权码"
-                   name="emailPwd"
-                   id="binding-emailPwd" ng-model="bindingData.emailPwd" required data-placement="top"
-                   data-toggle="tooltip" title="请放心，密码不会泄露，当然授权码听起来似乎更安全一些"/>
-            <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
-        </div>
+            <div class="form-group">
+                <input type="password" class="form-control login-field tooltip-hide" value="" placeholder="请输入个人邮箱密码或授权码"
+                       name="emailPwd"
+                       id="binding-emailPwd" ng-model="bindingData.emailPwd" required data-placement="top"
+                       data-toggle="tooltip" title="请放心，密码不会泄露，当然授权码听起来似乎更安全一些"/>
+                <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
+            </div>
 
-        <div class="form-group">
-            <input type="email" class="form-control login-field  tooltip-hide" value="" placeholder="请输入kindle邮箱"
-                   id="binding-kindleEmail" name="kindleEmail" ng-model="bindingData.kindleEmail" required
-                   data-placement="top" data-toggle="tooltip"
-                   title="您可以在kindle设备的「设置」-「设备选项」-「个性化您的kindle」中找到您的个人kindle设备邮箱地址">
-            <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
-        </div>
-        <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">绑定！</button>
-        <a class="login-link" href="#">Any problem ?</a>
+            <div class="form-group">
+                <input type="email" class="form-control login-field  tooltip-hide" value="" placeholder="请输入kindle邮箱"
+                       id="binding-kindleEmail" name="kindleEmail" ng-model="bindingData.kindleEmail" required
+                       data-placement="top" data-toggle="tooltip"
+                       title="您可以在kindle设备的「设置」-「设备选项」-「个性化您的kindle」中找到您的个人kindle设备邮箱地址">
+                <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
+            </div>
+            <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">绑定！</button>
+            <a class="login-link" href="#">Any problem ?</a>
 
-    </form>
+        </form>
+    </div>
     <!-- </div>-->
 </div>
 
