--- a/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
+++ b/kindlepocket-web/src/main/resources/static/html/infoUpdate.html
@@ -12,26 +12,35 @@
 
 <!-- Loading Flat UI -->
 <link href="/css/flat-ui.css" rel="stylesheet"/>
+<link href="/menu/css/reset.css" rel="stylesheet"/>
+<link href="/menu/css/default.css" rel="stylesheet"/>
+<link href="/menu/css/style.css" rel="stylesheet"/>
 
 <link href="/imgs/favicon.ico" rel="shortcut icon"/>
 
+<script src="/menu/js/modernizr.js"></script>
 <script src="/js/lib/jquery.min.js"></script>
 <script src="/js/lib/flat-ui.min.js"></script>
-<script src="/js/lib/application.js"></script>
+<!--<script src="/menu/js/jquery-2.1.1.js"></script>-->
+<script src="/menu/js/main.js"></script>
 <script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/lib/angular-ui-router.js"></script>
 <script src="/js/controller/infoUpdateController.js"></script>
 
 <style>
       body {
        <!-- min-height: 2000px;-->
         width: 100%;
-        height:100%;
+        height:50%;
         overflow-x: hidden;
       }
 
-      .navbar-static-top {
-        margin-bottom: 19px;
+      .login {
+        padding: 38px 20px 267px;
+      }
+
+      .mainTag {
+        padding: 60px 3%;
+        overflow-y: hidden;
       }
 
 </style>
@@ -45,94 +54,98 @@
       });
 </script>
 
+<body>
+    <main class="mainTag" ng-controller="infoUpdateController">
+        <div class="login">
+            <!-- <div class="login-screen">-->
+            <form class="login-form" name="bindingForm"  novalidate ng-submit="updateInfo()">
 
-<body ng-controller="infoUpdateController">
+                <div class="form-group">
+                    <input type="text" class="form-control login-field tooltip-hide"  placeholder="请输入手机号"
+                           id="binding-phone" name="phone" ng-model="subscriberData.phone" ng-minlength="11" ng-maxlength="11"
+                           required data-placement="top" data-toggle="tooltip"
+                           title="手机号是日后网页端应用上线后，绑定您的账号的凭证之一，但请放心填写，我们不会通过短信打扰您; 手机号长度11位，请不要输错"/>
+                    <label class="login-field-icon fui-user" for="binding-phone"></label>
+                </div>
 
+                <div class="form-group">
+                    <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入用户名"
+                           id="binding-userName" name="userName" ng-model="subscriberData.userName" ng-minlength="5" ng-maxlength="20"
+                           required data-placement="top" data-toggle="tooltip"
+                           title="起个用户名，听起来不错;用户名长度：5 ~ 20 位"/>
+                    <label class="login-field-icon fui-user" for="binding-userName"></label>
+                </div>
 
-<div class="navbar navbar-default navbar-static-top" role="navigation">
-    <div class="container">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                <span class="sr-only">Toggle navigation</span>
-            </button>
-            <a class="navbar-brand" href="#">Kindle Pocket</a>
+                <div class="form-group">
+                    <input type="email" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱"
+                           id="binding-email" name="email"
+                           ng-model="subscriberData.email" required data-placement="top" data-toggle="tooltip"
+                           title="我们将会通过您的个人邮箱给您的kindle推送书籍; 邮箱地址格式: example@163.com"/>
+                    <label class="login-field-icon fui-mail" for="binding-email"></label>
+                </div>
+
+                <div class="form-group">
+                    <input type="password" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱密码或授权码"
+                           name="emailPwd"
+                           id="binding-emailPwd" ng-model="subscriberData.emailPwd" required data-placement="top"
+                           data-toggle="tooltip" title="请放心，密码不会泄露，当然授权码听起来似乎更安全一些"/>
+                    <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
+                </div>
+
+                <div class="form-group">
+                    <input type="email" class="form-control login-field  tooltip-hide" placeholder="请输入kindle邮箱"
+                           id="binding-kindleEmail" name="kindleEmail" ng-model="subscriberData.kindleEmail" required
+                           data-placement="top" data-toggle="tooltip"
+                           title="您可以在kindle设备的「设置」-「设备选项」-「个性化您的kindle」中找到您的个人kindle设备邮箱地址">
+                    <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
+                </div>
+                <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">更新信息！</button>
+                <a class="login-link" href="#">Any problem ?</a>
+
+            </form>
+            <!-- </div>-->
         </div>
-        <div class="navbar-collapse collapse">
-            <!-- <ul class="nav navbar-nav">
-                 <li class="active"><a href="#">Home</a></li>
-                 <li><a href="#about">About</a></li>
-                 <li><a href="#contact">Contact</a></li>
-                 <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                     <ul class="dropdown-menu">
-                         <li><a href="#">Action</a></li>
-                         <li><a href="#">Another action</a></li>
-                         <li><a href="#">Something else here</a></li>
-                         <li class="divider"></li>
-                         <li class="dropdown-header">Nav header</li>
-                         <li><a href="#">Separated link</a></li>
-                         <li><a href="#">One more separated link</a></li>
-                     </ul>
-                 </li>
-             </ul>-->
-            <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">{{subscriberData.userName}}</a></li>
-                <!--<li class="active"><a href="./">Static top</a></li>
-                <li><a href="../navbar-fixed-top/">Fixed top</a></li>-->
-            </ul>
-        </div><!--/.nav-collapse -->
+    </main>
+
+    <a href="#cd-nav" class="cd-nav-trigger">Menu
+        <span class="cd-nav-icon"></span>
+
+        <svg x="0px" y="0px" width="54px" height="54px" viewBox="0 0 54 54">
+            <circle fill="transparent" stroke="#656e79" stroke-width="1" cx="27" cy="27" r="25" stroke-dasharray="157 157" stroke-dashoffset="157"></circle>
+        </svg>
+    </a>
+
+    <div id="cd-nav" class="cd-nav">
+        <div class="cd-navigation-wrapper">
+            <div class="cd-half-block">
+                <h2>Kindle Pocket</h2>
+
+                <nav>
+                    <ul class="cd-primary-nav">
+                        <li><a href="#0" class="selected">Info Update</a></li>
+                        <li><a href="#0">My Details</a></li>
+                        <li><a href="#0">Top 10</a></li>
+                        <li><a href="#0">Search</a></li>
+                        <li><a href="#0">Contact us</a></li>
+                    </ul>
+                </nav>
+            </div><!-- .cd-half-block -->
+
+            <div class="cd-half-block">
+                <address>
+                    <ul class="cd-contact-info">
+                        <li><a href="mailto:info@myemail.co">kindlepocket@163.com</a></li>
+                        <li>0244-12345678</li>
+                        <li>
+                            <span>MyStreetName 24</span>
+                            <span>W1234X</span>
+                            <span>London, UK</span>
+                        </li>
+                    </ul>
+                </address>
+            </div> <!-- .cd-half-block -->
+        </div> <!-- .cd-navigation-wrapper -->
     </div>
-</div>
-
-<div class="login">
-    <!-- <div class="login-screen">-->
-    <form class="login-form" name="bindingForm"  novalidate ng-submit="updateInfo()">
-
-        <div class="form-group">
-            <input type="text" class="form-control login-field tooltip-hide"  placeholder="请输入手机号"
-                   id="binding-phone" name="phone" ng-model="subscriberData.phone" ng-minlength="11" ng-maxlength="11"
-                   required data-placement="top" data-toggle="tooltip"
-                   title="手机号是日后网页端应用上线后，绑定您的账号的凭证之一，但请放心填写，我们不会通过短信打扰您; 手机号长度11位，请不要输错"/>
-            <label class="login-field-icon fui-user" for="binding-phone"></label>
-        </div>
-
-        <div class="form-group">
-            <input type="text" class="form-control login-field tooltip-hide" value="" placeholder="请输入用户名"
-                   id="binding-userName" name="userName" ng-model="subscriberData.userName" ng-minlength="5" ng-maxlength="20"
-                   required data-placement="top" data-toggle="tooltip"
-                   title="起个用户名，听起来不错;用户名长度：5 ~ 20 位"/>
-            <label class="login-field-icon fui-user" for="binding-userName"></label>
-        </div>
-
-        <div class="form-group">
-            <input type="email" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱"
-                   id="binding-email" name="email"
-                   ng-model="subscriberData.email" required data-placement="top" data-toggle="tooltip"
-                   title="我们将会通过您的个人邮箱给您的kindle推送书籍; 邮箱地址格式: example@163.com"/>
-            <label class="login-field-icon fui-mail" for="binding-email"></label>
-        </div>
-
-        <div class="form-group">
-            <input type="password" class="form-control login-field tooltip-hide" placeholder="请输入个人邮箱密码或授权码"
-                   name="emailPwd"
-                   id="binding-emailPwd" ng-model="subscriberData.emailPwd" required data-placement="top"
-                   data-toggle="tooltip" title="请放心，密码不会泄露，当然授权码听起来似乎更安全一些"/>
-            <label class="login-field-icon fui-lock" for="binding-emailPwd"></label>
-        </div>
-
-        <div class="form-group">
-            <input type="email" class="form-control login-field  tooltip-hide" placeholder="请输入kindle邮箱"
-                   id="binding-kindleEmail" name="kindleEmail" ng-model="subscriberData.kindleEmail" required
-                   data-placement="top" data-toggle="tooltip"
-                   title="您可以在kindle设备的「设置」-「设备选项」-「个性化您的kindle」中找到您的个人kindle设备邮箱地址">
-            <label class="login-field-icon fui-mail" for="binding-kindleEmail"></label>
-        </div>
-        <button class="btn btn-primary btn-lg btn-block" type="submit" href="#"  ng-disabled="bindingForm.$invalid">更新信息！</button>
-        <a class="login-link" href="#">Any problem ?</a>
-
-    </form>
-    <!-- </div>-->
-</div>
-
 </body>
+
 </html>
