--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -17,6 +17,8 @@
 <script src="/js/lib/angular-1.3.0.js"></script>
 <script src="/js/controller/detailController.js"></script>
 <script src="/js/services/detailService.js"></script>
+<link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
+<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 <style>
 
@@ -27,23 +29,51 @@
         overflow-x: hidden;
       }
 
+      #floatBtn {
+      	//opacity:0.7
+      }
+
 </style>
 
 <script>
+	//$(document).ready(function(){
+	//	$('.carousel').carousel();
+	//});
+
+	$(document).ready(function(){
+		// the "href" attribute of .modal-trigger must specify the modal ID that wants to be triggered
+		$('.modal-trigger').leanModal();
+	 });
+
+	  $(document).ready(function() {
+		$('input#input_text, textarea#textarea1').characterCounter();
+	  });
+
+	  var closeFAB = function() {
+	  	alert("blur");
+	  	$('.fixed-action-btn').closeFAB();
+	  }
 
 </script>
 
-<body>
+<body class="green lighten-5">
 
+<!--<div class="carousel">
+	<a class="carousel-item" href="#one!"><img src="http://lorempixel.com/250/250/nature/1"></a>
+	<a class="carousel-item" href="#two!"><img src="http://lorempixel.com/250/250/nature/2"></a>
+	<a class="carousel-item" href="#three!"><img src="http://lorempixel.com/250/250/nature/3"></a>
+	<a class="carousel-item" href="#four!"><img src="http://lorempixel.com/250/250/nature/4"></a>
+	<a class="carousel-item" href="#five!"><img src="http://lorempixel.com/250/250/nature/5"></a>
+</div>-->
 
 <main>
 	<div class="container" ng-controller="detailController" data-ng-init="getDetails()">
 		<div ng-repeat="detail in details">
 			<div class="col s12 m7">
 				<!--<h2 class="header">Horizontal Card</h2>-->
-				<div class="card horizontal">
+				<div class="card horizontal hoverable">
 					<div class="card-image">
-						<img src="http://lorempixel.com/100/190/nature/10">
+						<img src="/imgs/header.jpg">
 					</div>
 					<div class="card-stacked">
 						<div class="card-content">
@@ -58,51 +88,29 @@
 							</p>
 						</div>
 						<div class="card-action">
-							<a href="###" ng-click="sendMail(detail.id)">Send To Kindle</a>
-							<a href="###">Preview</a>
-<!--
-							<div class="preloader-wrapper small active">
-								<div class="spinner-layer spinner-blue">
-									<div class="circle-clipper left">
-										<div class="circle"></div>
-									</div><div class="gap-patch">
-									<div class="circle"></div>
-								</div><div class="circle-clipper right">
-									<div class="circle"></div>
-								</div>
-								</div>
+							<a turnToSuccess ng-init="isSendTriggered=false" ng-if="!isSendTriggered" href="###" class="btn-small waves-effect lighten-4 z-depth-0" ng-click="sendMail(detail.id)"><font size="2px">Send To Kindle</font></a>
+							<a href="###" class="modal-trigger btn-small waves-effect lighten-4 z-depth-0" ng-click="popUpCommentModal(detail.id)"><font size="2px">COMMENT</font></a>
 
-								<div class="spinner-layer spinner-red">
-									<div class="circle-clipper left">
-										<div class="circle"></div>
-									</div><div class="gap-patch">
-									<div class="circle"></div>
-								</div><div class="circle-clipper right">
-									<div class="circle"></div>
+							<!-- Comments Modal -->
+							<div id="{{detail.id}}" class="modal">
+								<div class="modal-content">
+									<br/><br/><br/>
+									<div class="row">
+										<form class="col s12">
+											<div class="row">
+												<div class="input-field col s12">
+													<textarea id="textarea1" class="materialize-textarea" length="140"></textarea>
+													<label for="textarea1"><b>Comments here : </b></label>
+												</div>
+											</div>
+										</form>
+									</div>
 								</div>
+								<div class="modal-footer">
+									<a href="#!" class="modal-action modal-close waves-effect btn-flat z-depth-0" type="submit">send</a>
 								</div>
-
-								<div class="spinner-layer spinner-yellow">
-									<div class="circle-clipper left">
-										<div class="circle"></div>
-									</div><div class="gap-patch">
-									<div class="circle"></div>
-								</div><div class="circle-clipper right">
-									<div class="circle"></div>
-								</div>
-								</div>
-
-								<div class="spinner-layer spinner-green">
-									<div class="circle-clipper left">
-										<div class="circle"></div>
-									</div><div class="gap-patch">
-									<div class="circle"></div>
-								</div><div class="circle-clipper right">
-									<div class="circle"></div>
-								</div>
-								</div>
-							</div>-->
-
+							</div>
+							<!-- Modal Structure End -->
 						</div>
 					</div>
 				</div>
@@ -123,6 +131,18 @@
 			</ul>
 		</div>
 
+	</div>
+
+	<div class="fixed-action-btn click-to-toggle" style="bottom: 110px; right: 28px;">
+		<a id="floatBtn" class="btn-floating btn-middle red waves-effect z-depth-2" onblur="this.closeFAB()">
+			<i class="large material-icons">add</i>
+		</a>
+		<ul>
+			<li><a class="btn-floating yellow darken-1 z-depth-2"><i class="material-icons">settings</i></a></li>
+			<li><a class="btn-floating red  waves-effect z-depth-2"><i class="material-icons">message</i></a></li>
+			<li><a class="btn-floating green waves-effect z-depth-2"><i class="material-icons">search</i></a></li>
+			<li><a class="btn-floating blue waves-effect z-depth-2"><i class="material-icons">live_help</i></a></li>
+		</ul>
 	</div>
 
 </main>
