--- a/kindlepocket-web/src/main/resources/static/html/details.html
+++ b/kindlepocket-web/src/main/resources/static/html/details.html
@@ -17,6 +17,7 @@
 <script src="/js/lib/angular-1.3.0.js"></script>
 <script src="/js/controller/detailController.js"></script>
 <script src="/js/services/detailService.js"></script>
+<script src="/js/services/requestService.js"></script>
 <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
@@ -142,7 +143,7 @@
 			<i class="large material-icons">add</i>
 		</a>
 		<ul>
-			<li><a class="btn-floating yellow darken-1 z-depth-2"><i class="material-icons">settings</i></a></li>
+			<li><a class="btn-floating yellow darken-1 z-depth-2" href="toInfo"><i class="material-icons">settings</i></a></li>
 			<li><a class="btn-floating red  waves-effect z-depth-2"><i class="material-icons">message</i></a></li>
 			<li><a class="btn-floating green waves-effect z-depth-2"><i class="material-icons">search</i></a></li>
 			<li><a class="btn-floating blue waves-effect z-depth-2 modal-trigger" href="#bottomModal"><i class="material-icons">live_help</i></a></li>
