--- a/kindlepocket-web/src/main/resources/static/html/info.html
+++ b/kindlepocket-web/src/main/resources/static/html/info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="details">
+<html lang="en" ng-app="info">
 
 <head>
     <meta charset="UTF-8"/>
@@ -15,81 +15,65 @@
 <script src="/js/lib/jquery.min.js"></script>
 <script src="/js/lib/materialize.min.js"></script>
 <script src="/js/lib/angular-1.3.0.js"></script>
-<script src="/js/controller/detailController.js"></script>
-<script src="/js/services/detailService.js"></script>
+<script src="/js/services/requestService.js"></script>
+<script src="/js/controller/infoController.js"></script>
+
 <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<body>
+<body ng-controller="infoController">
+    <div class="container" data-ng-init="getDeliveryRecords()">
 
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-                <div class="col s2">
-                    <img src="/imgs/yuna.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
-                </div>
-                <div class="col s10">
-                  <span class="black-text">
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                  </span>
+        <div class="col s12 m8 offset-m2 l6 offset-l3">
+            <div class="card-panel grey lighten-5 z-depth-1  waves-effect">
+                <div class="row valign-wrapper">
+                    <div class="col s2">
+                        <img src="/imgs/yuna.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+                    </div>
+                    <div class="col s10">
+                          <span class="black-text">
+                            This is a square image. Add the "circle" class to it to make it appear circular.
+                            This is a square image. Add the "circle" class to it to make it appear circular.
+                          </span>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
-    <div class="col s12 m8 offset-m2 l6 offset-l3">
-        <div class="card-panel grey lighten-5 z-depth-1">
-            <div class="row valign-wrapper">
-                <div class="col s2">
-                    <img src="/imgs/yuna.jpg" alt="" class="circle responsive-img"> <!-- notice the "circle" class -->
+        <!-- delivery records -->
+        <ul class="collapsible" data-collapsible="accordion">
+            <li>
+                <div class="collapsible-header active"><i class="material-icons">filter_drama</i>Delivery Record</div>
+                <div class="collapsible-body">
+                    <table class="striped centered">
+                        <thead>
+                        <tr>
+                            <th data-field="id">Name</th>
+                            <th data-field="name">Delivery Date</th>
+                            <th data-field="price">Delivery Status</th>
+                            <th data-field="price">Action</th>
+                        </tr>
+                        </thead>
+
+                        <tbody ng-repeat="record in records">
+
+                            <tr>
+                                <td ng-bind="record.bookTitle"></td>
+                                <td ng-bind="record.deliveryDate | date:'yyyy/MM/dd HH:mm:ss'"></td>
+                                <td ng-bind="record.isDelivered | renderStatus"></td>
+                                <td>
+                                    <a class="waves-effect waves-light btn-small">RESEND</a>
+                                    <a class="waves-effect waves-light btn-small">DELETE</a>
+                                </td>
+                            </tr>
+
+                        </tbody>
+                    </table>
                 </div>
-                <div class="col s10">
-                  <span class="black-text">
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                    This is a square image. Add the "circle" class to it to make it appear circular.
-                  </span>
-                </div>
-            </div>
-        </div>
+            </li>
+        </ul>
+
+
     </div>
 
 </body>
