--- a/kindlepocket-web/src/main/resources/static/html/info.html
+++ b/kindlepocket-web/src/main/resources/static/html/info.html
@@ -17,6 +17,7 @@
 <script src="/js/lib/angular-1.3.0.js"></script>
 <script src="/js/services/requestService.js"></script>
 <script src="/js/controller/infoController.js"></script>
+<script src="/js/services/userInfoService.js"></script>
 
 <link href="http://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet" type="text/css">
 <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
